  - enhancement: show document creator on document lists [chilan]
  - enhancement: added support for confirmation user storage in documents [chilan]
  - enhancement: allow to select which helpdesk ticket details are printed [chilan]
  - enhancement: added document number sort cryterion to invoice report [chilan]
  - added script to load and bind buildings with teryt localizations [kosa/chilan]

version 1.11.21 (2016-10-14):

  - added support for DSN and MDN in lms-notify.php script [chilan]
  - smarty installation is provided by composer from now [chilan]
  - added support for sms notifications in timetable type [chilan]
  - show event summary for all found events at bottom [chilan]
  - unification of cash import code as preparation for cashimport backend
    scripts' usage [chilan]
  - added bin/lms-cashimport.php script as universal backend for
    loading cash import file contents from specified files [chilan]
  - added creation time for events [chilan]
  - added selection between invoice report and debit note report and
    generating related report according to this selection [chilan]
  - current is marked by darker title bar in timetable [chilan]
  - allow to select between all, public and private events in event list filter [chilan]
  - lms-notify.php: added %totalB, %totalsaldo, %totalbalance special
    symbol support for debtors notification type which store total customer balance [chilan]
  - added script which fetches cash import files from mailbox (pop3, imap, etc.) [chilan]
  - sending invoices code moved to LMS::SendInvoices() as preparation for
    invoice sends from LMS UI [chilan]
  - invoice sends are possible from LMS UI [chilan]
  - print events accordingly to privacy filter selection [chilan]
  - changed input types to email and tel where it is sane [kyob]
  - set required attibute for some form fields [kyob]
  - improved selection of node and network devices which should be connected
    to given network device [kosa/chilan]