@@ -413,10 +413,10 @@
 			<IMG src="img/attach.gif" alt="">
 		</TD>
 		<TD style="width: 1%;" class="bold nobr">
-			{trans("Attachment:")}
+			{trans("Attachments:")}
 		</TD>
 		<TD style="width: 98%;">
-			<INPUT name="file[]" type="file" size="60" multiple {tip text="Enter path to file or click 'Browse' button" trigger="file"}>
+			{fileupload id="files" fileupload=$fileupload}
 		</TD>
 	</TR>
 	<TR>
